# RKernel

./: .gitignore  CMakeLists.txt
src/: kernel.cpp
src/boot/: bootloader.asm
src/include/: keyboard.h  screen.h  system.h  utils.h
src/sys/: gdt.c  idt.c  irq.c  isrs.c  screen.c  utils.c
src/sys/drv/: keyboard.c
